--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
-    "react-router": "~3.2.0"
+    "react-router": "~3.2.0",
+    "react-google-charts": "^1.5.5"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1",
